--- a/.env.local.example
+++ b/.env.local.example
@@ -1,17 +1,15 @@
-AUTH_SECRET= # Linux: `openssl rand -hex 32` or go to https://generate-secret.vercel.app/32
+NEXTAUTH_URL=
 
-AUTH_AUTH0_ID=
-AUTH_AUTH0_SECRET=
-AUTH_AUTH0_ISSUER=
+AUTH_SECRET=
 
-AUTH_FACEBOOK_ID=
-AUTH_FACEBOOK_SECRET=
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
 
-AUTH_GITHUB_ID=
-AUTH_GITHUB_SECRET=
+DATABASE_URL=
+DB_HOST=
+DB_USER=
+DB_PASSWORD=
+DB_NAME=
 
-AUTH_GOOGLE_ID=
-AUTH_GOOGLE_SECRET=
-
-AUTH_TWITTER_ID=
-AUTH_TWITTER_SECRET=
+# https://virtuabyte.com/api/auth/callback/google
+# http://localhost:3000/api/auth/callback/google
