--- a/package.json
+++ b/package.json
@@ -1,46 +1,36 @@
 {
+  "name": "virtuabyte",
+  "version": "0.1.0",
   "private": true,
-  "description": "An example project for NextAuth.js with Next.js",
-  "repository": "https://github.com/nextauthjs/next-auth-example.git",
-  "bugs": {
-    "url": "https://github.com/nextauthjs/next-auth/issues"
-  },
-  "homepage": "https://next-auth-example.vercel.app",
   "scripts": {
-    "dev": "next",
+    "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint",
+    "postinstall": "prisma generate"
   },
-  "author": "Iain Collins <me@iaincollins.com>",
-  "contributors": [
-    "Balázs Orbán <info@balazsorban.com>",
-    "Nico Domino <yo@ndo.dev>",
-    "Lluis Agusti <hi@llu.lu>",
-    "Thang Huu Vu <hi@thvu.dev>"
-  ],
   "dependencies": {
-    "@radix-ui/react-avatar": "^1.0.3",
-    "@radix-ui/react-collapsible": "^1.0.3",
-    "@radix-ui/react-dropdown-menu": "^2.0.5",
-    "@radix-ui/react-navigation-menu": "^1.1.3",
-    "@radix-ui/react-slot": "^1.0.2",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.0.0",
-    "lucide-react": "^0.274.0",
-    "next": "latest",
-    "next-auth": "beta",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "tailwind-merge": "^1.14.0",
-    "tailwindcss-animate": "^1.0.7"
+    "@auth/pg-adapter": "^0.2.6",
+    "@auth/prisma-adapter": "^1.0.8",
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.0.18",
+    "@prisma/client": "^5.6.0",
+    "next": "14.0.3",
+    "next-auth": "^5.0.0-beta.3",
+    "react": "^18",
+    "react-dom": "^18",
+    "react-icons": "^4.12.0"
   },
   "devDependencies": {
-    "@types/node": "^18",
-    "@types/react": "^18.2.23",
-    "@types/react-dom": "^18.2.8",
-    "autoprefixer": "^10.4.15",
-    "postcss": "^8.4.29",
-    "tailwindcss": "^3.3.3",
-    "typescript": "^5.2.2"
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.0.3",
+    "postcss": "^8",
+    "prisma": "^5.6.0",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5"
   }
 }
