--- a/.env.local.example
+++ b/.env.local.example
@@ -1,15 +1,30 @@
+# Authentication
 NEXTAUTH_URL=
-
 AUTH_SECRET=
 
+# Google OAuth
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 
+# Email Server
+EMAIL_SERVER_HOST=
+EMAIL_SERVER_PORT=
+EMAIL_SERVER_USER=
+EMAIL_SERVER_PASSWORD=
+EMAIL_FROM=
+
+# Database
 DATABASE_URL=
 DB_HOST=
 DB_USER=
 DB_PASSWORD=
 DB_NAME=
 
+
+# Stripe
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=
+STRIPE_SECRET_KEY=
+
+# Callback URLs
 # https://virtuabyte.com/api/auth/callback/google
 # http://localhost:3000/api/auth/callback/google
