--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
     "@prisma/client": "^5.6.0",
-    "next": "14.0.3",
+    "@stripe/react-stripe-js": "^2.4.0",
+    "@stripe/stripe-js": "^2.2.0",
+    "clsx": "^2.0.0",
+    "next": "^14.0.3",
     "next-auth": "^5.0.0-beta.3",
     "nodemailer": "^6.9.7",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^4.12.0"
+    "react-icons": "^4.12.0",
+    "stripe": "^14.7.0"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
