--- a/.env.local.example
+++ b/.env.local.example
@@ -24,6 +24,7 @@ DB_NAME=
 # Stripe
 NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=
 STRIPE_SECRET_KEY=
+STRIPE_WEBHOOK_SECRET=
 
 # Callback URLs
 # https://virtuabyte.com/api/auth/callback/google
