--- a/.env.local.example
+++ b/.env.local.example
@@ -25,6 +25,7 @@ DB_NAME=
 NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=
 STRIPE_SECRET_KEY=
 STRIPE_WEBHOOK_SECRET=
+NEXT_PUBLIC_STRIPE_API_ID_FY=
 
 # Callback URLs
 # https://virtuabyte.com/api/auth/callback/google
