--- a/package.json
+++ b/package.json
@@ -17,13 +17,14 @@
     "@stripe/react-stripe-js": "^2.4.0",
     "@stripe/stripe-js": "^2.2.0",
     "clsx": "^2.0.0",
-    "next": "^14.0.3",
+    "mailgun.js": "^9.3.0",
+    "next": "^14.0.4",
     "next-auth": "^5.0.0-beta.3",
     "nodemailer": "^6.9.7",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
-    "stripe": "^14.7.0"
+    "stripe": "^14.8.0"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
@@ -33,7 +34,7 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.16",
     "eslint": "^8",
-    "eslint-config-next": "14.0.3",
+    "eslint-config-next": "14.0.4",
     "postcss": "^8",
     "prisma": "^5.7.0",
     "tailwindcss": "^3.3.6",
