--- a/.env.local.example
+++ b/.env.local.example
@@ -30,6 +30,15 @@ STRIPE_SECRET_KEY=
 STRIPE_WEBHOOK_SECRET=
 NEXT_PUBLIC_STRIPE_API_ID_FY=
 
+# Prices
+
+# Freelancer
+NEXT_PUBLIC_STRIPE_API_ID_FY=
+# Partnership (Business)
+NEXT_PUBLIC_STRIPE_API_ID_BY=
+# Family (Enterprise)
+NEXT_PUBLIC_STRIPE_API_ID_EY=
+
 # Callback URLs
 # https://virtuabyte.com/api/auth/callback/google
 # http://localhost:3000/api/auth/callback/google
