--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "autoprefixer": "^10.4.16",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
+    "fluid-tailwind": "^0.1.6",
     "postcss": "^8",
     "prisma": "^5.7.0",
     "tailwindcss": "^3.3.6",
