--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@prisma/client": "^5.7.0",
     "@stripe/react-stripe-js": "^2.4.0",
     "@stripe/stripe-js": "^2.2.0",
+    "@tailwindcss/typography": "^0.5.12",
     "clsx": "^2.0.0",
     "mailgun.js": "^9.3.0",
     "next": "^14.0.4",
